@@ -1,8 +1,8 @@
-7a7b5072e21b31f29856cdfeff77177d *ChangeLog
-cdff8304ca063b3a1c2babff2906d61a *DESCRIPTION
+294502a0dd01f83b6979ff7cd0457468 *ChangeLog
+73161f945e36791d1fae8506649684a6 *DESCRIPTION
 f36f02b8e559e17e5d2e56210d8f8358 *LICENSE
 1fc46cd37ec81684e1c131b0b4722989 *NAMESPACE
-841a121670e190fc6cb54e5d7b5f8199 *R/AAA.R
+f3bbe96042fd513db79b9efe6f132187 *R/AAA.R
 1399d0064b46e6e6c90600b1b64a5e19 *R/CCmaps.R
 5848792717e41318276dbe13f75315b7 *R/DP.R
 b52e6bfd6272c6c26bec32d86332d830 *R/GE_png.R
@@ -55,7 +55,7 @@ d0b8c2ac5cb2ac40fff68a7b329df381 *data/SplashDams.rda
 ad794d2bb004f79c29d6d20a9341a0ec *data/gpcholes.rda
 f58d7bbadb55463c773ef91b74f7e6cf *data/state.vbm.rda
 b11b2dc736e768c927211d6fce5ab7df *data/wrld_simpl.rda
-7a7b5072e21b31f29856cdfeff77177d *inst/ChangeLog
+294502a0dd01f83b6979ff7cd0457468 *inst/ChangeLog
 f36f02b8e559e17e5d2e56210d8f8358 *inst/LICENSE
 0d1e185186bdb70959760c0a63f7be4f *inst/changes
 ef247b6c335e75e48f81da7ef7554fa6 *inst/grids/simple.ag
@@ -116,7 +116,7 @@ e455cbefaf6d3970b24081a7c02d8fa3 *man/getinfo.shape.Rd
 6a8926d8c881588f4c7907711591c0cc *man/kmlPoints.Rd
 795ee68785451f2fc7623bcd003a43fd *man/kmlPolygon.Rd
 5aee594b0203b637510fe71e1ce2bda3 *man/leglabs.Rd
-53cdc0df98e7d350bd2cb54da822d7f9 *man/lineLabel.Rd
+c5f20bfb6b29271ed4868200d37d5b95 *man/lineLabel.Rd
 fc945c4eb6e1d7ad5e6c57671285a4c9 *man/map2SpatialPolygons.Rd
 faeaff841d01f23c46e359dcac2f95e0 *man/nearestPointOnLine.Rd
 4c4dfe73ec4e6c87be454a6f0cb53f0a *man/nearestPointOnSegment.Rd
@@ -143,7 +143,7 @@ ace8a20344f545f9e0faa30f8e7de2e9 *man/spCbind-methods.Rd
 71a1b2f0e6652e19f21cc60fdf44d235 *man/thinnedSpatialPoly.Rd
 f7e8eda586323e58757d488d0aceb282 *man/unionSpatialPolygons.Rd
 07568c79ba78dfd739f910d93048aa07 *man/wrld_simpl.Rd
-6a7e91c6215fd61eddb116cab662dab2 *maptools-Ex.R
+81158e2282656234a0e579acd9b6bff6 *maptools-Ex.R
 1bf1a0abc70257b5b43e39184b67187a *src/Rcentroid.c
 df841af760640aee1bd19d047f3cecc3 *src/Rgshhs.c
 9509debecc4e83e39be501a04c003f11 *src/Rgshhs.h
