@@ -1,3 +1,15 @@
+2013-01-16 09:22  rsbivand
+
+	* DESCRIPTION, R/AAA.R: move startup message to .onAttach
+
+2013-01-04 00:36  oscarperpi
+
+	* man/lineLabel.Rd: Fixed description in lineLabel.Rd
+
+2012-12-21 12:36  rsbivand
+
+	* ChangeLog, inst/ChangeLog: tidy
+
 2012-11-19 13:29  edzer
 
 	* DESCRIPTION, R/dotsinpolys.R: version bump, added URL
